brackets/brackets.css
body {
  overflow: hidden;
}

#toastContainer {
  position: fixed;
  bottom: 10px;
  left: 10px;
  z-index: 1056;
  font-weight: bold;
}

#toastContainer > div > div {
  font-size: 1.5em;
}

#myBrackets {
  max-height: 75vh;
  overflow: auto;
}

#bracketEditor {
  margin-bottom: 200px;
}

#optionContainer {
  max-height: 90vh;
  overflow: auto;
}

.deletebtn {
  color: #e74c3c;
}

.deletebtn:hover {
  color: #c44133;
  cursor: pointer;
}

.scoreDiv {
  height: 40px;
  box-sizing: border-box;
  display: inline-block;
  border-width: 1px;
  border: 1px solid var(--bs-secondary-color);
  border-radius: 6px;
  padding: 6px;
  vertical-align: middle;
  color: var(--bs-secondary-color);
}

#uwufufuPreview {
  max-height: 30vh;
  overflow: auto;
}

.my-bracket-body {
  max-height: 20vh;
  overflow: auto;
}

#left_title {
  height: 10vh;
  width: 30vw;
  white-space: nowrap;
  overflow: hidden;
  display: inline-flex;
  font-size: 1.4rem;
  margin-bottom: 5px;
  z-index: 100;
}

#left_title > .card-body {
  padding: 5px;
}

#centerTitle {
  width: 10vw;
  display: inline-flex;
  font-size: 1.1rem;
}

#centerTitle > .card-body {
  padding: 5px;
}

#right_title {
  height: 10vh;
  width: 30vw;
  white-space: nowrap;
  overflow: hidden;
  display: inline-flex;
  font-size: 1.4rem;
  margin-bottom: 5px;
  z-index: 100;
}

#right_title > .card-body {
  padding: 5px;
}

#left_card.zoomed {
  z-index: 102;
}

#right_card.zoomed {
  z-index: 101;
}

#hideScore {
  height: 38px;
}

